tests/idris2/coverage012/expected
1/1: Building Issue899 (Issue899.idr)
Error: zeroImpossible is not covering.

Issue899.idr:3:1--3:46
 1 | %default total
 2 | 
 3 | zeroImpossible : (k : Nat) -> k === Z -> Void
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    zeroImpossible 0 _

